--- a/ElasticNet/ElasticNet.ipynb
+++ b/ElasticNet/ElasticNet.ipynb
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -996,6 +996,73 @@
     "\n",
     "# Acceder a los objetos\n",
     "results_labels_df_CN_train, results_labels_df_CN_test, results_labels_list, results_model, results_per_fold_CN_train, results_per_fold_CN_test, results_per_fold_pat = loaded_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Fold        MAE  MAE_corrected        R2  R2_corrected\n",
+      "0     1  14.873829       8.267507  0.244336      0.738380\n",
+      "1     2  14.244327       8.434428  0.313809      0.678343\n",
+      "2     3  16.567580       8.459733  0.160322      0.768309\n",
+      "3     4  15.645730       7.745282  0.196660      0.783420\n",
+      "4     5  15.849169       9.268096  0.111086      0.666494\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score\n",
+    "\n",
+    "# Crear listas para almacenar las métricas de cada fold\n",
+    "mae_list = []\n",
+    "mae_corrected_list = []\n",
+    "r2_list = []\n",
+    "r2_corrected_list = []\n",
+    "\n",
+    "# Iterar sobre cada DataFrame en la lista\n",
+    "for df in results_per_fold_CN_test:\n",
+    "    # Calcular MAE y R2 para y_pred\n",
+    "    mae = mean_absolute_error(df['y_labels'], df['y_pred'])\n",
+    "    r2 = r2_score(df['y_labels'], df['y_pred'])\n",
+    "    \n",
+    "    # Calcular MAE y R2 para y_pred_corrected\n",
+    "    mae_corrected = mean_absolute_error(df['y_labels'], df['y_pred_corrected'])\n",
+    "    r2_corrected = r2_score(df['y_labels'], df['y_pred_corrected'])\n",
+    "    \n",
+    "    # Agregar los valores a las listas\n",
+    "    mae_list.append(mae)\n",
+    "    mae_corrected_list.append(mae_corrected)\n",
+    "    r2_list.append(r2)\n",
+    "    r2_corrected_list.append(r2_corrected)\n",
+    "\n",
+    "# Crear un DataFrame con los resultados\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'Fold': range(1, len(results_per_fold_CN_test) + 1),\n",
+    "    'MAE': mae_list,\n",
+    "    'MAE_corrected': mae_corrected_list,\n",
+    "    'R2': r2_list,\n",
+    "    'R2_corrected': r2_corrected_list\n",
+    "})\n",
+    "\n",
+    "# Mostrar las primeras filas del DataFrame de métricas\n",
+    "print(metrics_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = \"results/metrics_results_per_fold.xlsx\"\n",
+    "metrics_df.to_excel(output_file, index=False, engine='openpyxl')"
    ]
   },
   {
