--- a/KNN/KNN.ipynb
+++ b/KNN/KNN.ipynb
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,6 +901,73 @@
     "\n",
     "# Acceder a los objetos\n",
     "results_labels_df_CN_train, results_labels_df_CN_test, results_labels_list, results_model, results_per_fold_CN_train, results_per_fold_CN_test, results_per_fold_pat = loaded_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Fold        MAE  MAE_corrected        R2  R2_corrected\n",
+      "0     1  13.463749       7.935316  0.349420      0.785163\n",
+      "1     2  13.528419       8.120899  0.324491      0.773736\n",
+      "2     3  16.006803       8.987131  0.162246      0.751387\n",
+      "3     4  14.908054       8.583514  0.216401      0.735937\n",
+      "4     5  14.682269       8.431133  0.174234      0.733329\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score\n",
+    "\n",
+    "# Crear listas para almacenar las métricas de cada fold\n",
+    "mae_list = []\n",
+    "mae_corrected_list = []\n",
+    "r2_list = []\n",
+    "r2_corrected_list = []\n",
+    "\n",
+    "# Iterar sobre cada DataFrame en la lista\n",
+    "for df in results_per_fold_CN_test:\n",
+    "    # Calcular MAE y R2 para y_pred\n",
+    "    mae = mean_absolute_error(df['y_labels'], df['y_pred'])\n",
+    "    r2 = r2_score(df['y_labels'], df['y_pred'])\n",
+    "    \n",
+    "    # Calcular MAE y R2 para y_pred_corrected\n",
+    "    mae_corrected = mean_absolute_error(df['y_labels'], df['y_pred_corrected'])\n",
+    "    r2_corrected = r2_score(df['y_labels'], df['y_pred_corrected'])\n",
+    "    \n",
+    "    # Agregar los valores a las listas\n",
+    "    mae_list.append(mae)\n",
+    "    mae_corrected_list.append(mae_corrected)\n",
+    "    r2_list.append(r2)\n",
+    "    r2_corrected_list.append(r2_corrected)\n",
+    "\n",
+    "# Crear un DataFrame con los resultados\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'Fold': range(1, len(results_per_fold_CN_test) + 1),\n",
+    "    'MAE': mae_list,\n",
+    "    'MAE_corrected': mae_corrected_list,\n",
+    "    'R2': r2_list,\n",
+    "    'R2_corrected': r2_corrected_list\n",
+    "})\n",
+    "\n",
+    "# Mostrar las primeras filas del DataFrame de métricas\n",
+    "print(metrics_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = \"results/metrics_results_per_fold.xlsx\"\n",
+    "metrics_df.to_excel(output_file, index=False, engine='openpyxl')"
    ]
   },
   {
