--- a/Random_Forest/RandomForest.ipynb
+++ b/Random_Forest/RandomForest.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,6 +984,73 @@
     "\n",
     "# Acceder a los objetos\n",
     "results_labels_df_CN_train, results_labels_df_CN_test, results_labels_list, results_model, results_per_fold_CN_train, results_per_fold_CN_test, results_per_fold_pat = loaded_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Fold        MAE  MAE_corrected        R2  R2_corrected\n",
+      "0     1  12.346928       7.645832  0.468108      0.772749\n",
+      "1     2  12.725551       8.421338  0.389132      0.710355\n",
+      "2     3  15.256977      10.424931  0.232188      0.643532\n",
+      "3     4  13.909474       8.728341  0.330417      0.692253\n",
+      "4     5  14.396297       9.735969  0.200020      0.604283\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score\n",
+    "\n",
+    "# Crear listas para almacenar las métricas de cada fold\n",
+    "mae_list = []\n",
+    "mae_corrected_list = []\n",
+    "r2_list = []\n",
+    "r2_corrected_list = []\n",
+    "\n",
+    "# Iterar sobre cada DataFrame en la lista\n",
+    "for df in results_per_fold_CN_test:\n",
+    "    # Calcular MAE y R2 para y_pred\n",
+    "    mae = mean_absolute_error(df['y_labels'], df['y_pred'])\n",
+    "    r2 = r2_score(df['y_labels'], df['y_pred'])\n",
+    "    \n",
+    "    # Calcular MAE y R2 para y_pred_corrected\n",
+    "    mae_corrected = mean_absolute_error(df['y_labels'], df['y_pred_corrected'])\n",
+    "    r2_corrected = r2_score(df['y_labels'], df['y_pred_corrected'])\n",
+    "    \n",
+    "    # Agregar los valores a las listas\n",
+    "    mae_list.append(mae)\n",
+    "    mae_corrected_list.append(mae_corrected)\n",
+    "    r2_list.append(r2)\n",
+    "    r2_corrected_list.append(r2_corrected)\n",
+    "\n",
+    "# Crear un DataFrame con los resultados\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'Fold': range(1, len(results_per_fold_CN_test) + 1),\n",
+    "    'MAE': mae_list,\n",
+    "    'MAE_corrected': mae_corrected_list,\n",
+    "    'R2': r2_list,\n",
+    "    'R2_corrected': r2_corrected_list\n",
+    "})\n",
+    "\n",
+    "# Mostrar las primeras filas del DataFrame de métricas\n",
+    "print(metrics_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = \"results/metrics_results_per_fold.xlsx\"\n",
+    "metrics_df.to_excel(output_file, index=False, engine='openpyxl')"
    ]
   },
   {
