--- a/BaggedKNN/BaggedKNN.ipynb
+++ b/BaggedKNN/BaggedKNN.ipynb
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,8 +956,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Extracción de métricas de evaluacion por fold"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Fold        MAE  MAE_corrected        R2  R2_corrected\n",
+      "0     1  13.636123       7.279807  0.353654      0.811294\n",
+      "1     2  13.868646       7.312467  0.329081      0.807380\n",
+      "2     3  16.133759       8.868625  0.151943      0.748926\n",
+      "3     4  15.084196       7.886971  0.220622      0.756837\n",
+      "4     5  14.929185       8.471851  0.164029      0.728003\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score\n",
+    "\n",
+    "# Crear listas para almacenar las métricas de cada fold\n",
+    "mae_list = []\n",
+    "mae_corrected_list = []\n",
+    "r2_list = []\n",
+    "r2_corrected_list = []\n",
+    "\n",
+    "# Iterar sobre cada DataFrame en la lista\n",
+    "for df in results_per_fold_CN_test:\n",
+    "    # Calcular MAE y R2 para y_pred\n",
+    "    mae = mean_absolute_error(df['y_labels'], df['y_pred'])\n",
+    "    r2 = r2_score(df['y_labels'], df['y_pred'])\n",
+    "    \n",
+    "    # Calcular MAE y R2 para y_pred_corrected\n",
+    "    mae_corrected = mean_absolute_error(df['y_labels'], df['y_pred_corrected'])\n",
+    "    r2_corrected = r2_score(df['y_labels'], df['y_pred_corrected'])\n",
+    "    \n",
+    "    # Agregar los valores a las listas\n",
+    "    mae_list.append(mae)\n",
+    "    mae_corrected_list.append(mae_corrected)\n",
+    "    r2_list.append(r2)\n",
+    "    r2_corrected_list.append(r2_corrected)\n",
+    "\n",
+    "# Crear un DataFrame con los resultados\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'Fold': range(1, len(results_per_fold_CN_test) + 1),\n",
+    "    'MAE': mae_list,\n",
+    "    'MAE_corrected': mae_corrected_list,\n",
+    "    'R2': r2_list,\n",
+    "    'R2_corrected': r2_corrected_list\n",
+    "})\n",
+    "\n",
+    "# Mostrar las primeras filas del DataFrame de métricas\n",
+    "print(metrics_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = \"results/metrics_results_per_fold.xlsx\"\n",
+    "metrics_df.to_excel(output_file, index=False, engine='openpyxl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
