--- a/KernelRidge/KernelRidge.ipynb
+++ b/KernelRidge/KernelRidge.ipynb
@@ -925,6 +925,73 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Fold        MAE  MAE_corrected        R2  R2_corrected\n",
+      "0     1  13.193546       8.774748  0.401705      0.708475\n",
+      "1     2  12.495336       8.962842  0.424634      0.702505\n",
+      "2     3  14.909029       9.225034  0.272855      0.714899\n",
+      "3     4  14.286167       9.545991  0.268835      0.655110\n",
+      "4     5  15.263730      10.986279  0.133489      0.528957\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score\n",
+    "\n",
+    "# Crear listas para almacenar las métricas de cada fold\n",
+    "mae_list = []\n",
+    "mae_corrected_list = []\n",
+    "r2_list = []\n",
+    "r2_corrected_list = []\n",
+    "\n",
+    "# Iterar sobre cada DataFrame en la lista\n",
+    "for df in results_per_fold_CN_test:\n",
+    "    # Calcular MAE y R2 para y_pred\n",
+    "    mae = mean_absolute_error(df['y_labels'], df['y_pred'])\n",
+    "    r2 = r2_score(df['y_labels'], df['y_pred'])\n",
+    "    \n",
+    "    # Calcular MAE y R2 para y_pred_corrected\n",
+    "    mae_corrected = mean_absolute_error(df['y_labels'], df['y_pred_corrected'])\n",
+    "    r2_corrected = r2_score(df['y_labels'], df['y_pred_corrected'])\n",
+    "    \n",
+    "    # Agregar los valores a las listas\n",
+    "    mae_list.append(mae)\n",
+    "    mae_corrected_list.append(mae_corrected)\n",
+    "    r2_list.append(r2)\n",
+    "    r2_corrected_list.append(r2_corrected)\n",
+    "\n",
+    "# Crear un DataFrame con los resultados\n",
+    "metrics_df = pd.DataFrame({\n",
+    "    'Fold': range(1, len(results_per_fold_CN_test) + 1),\n",
+    "    'MAE': mae_list,\n",
+    "    'MAE_corrected': mae_corrected_list,\n",
+    "    'R2': r2_list,\n",
+    "    'R2_corrected': r2_corrected_list\n",
+    "})\n",
+    "\n",
+    "# Mostrar las primeras filas del DataFrame de métricas\n",
+    "print(metrics_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_file = \"results/metrics_results_per_fold.xlsx\"\n",
+    "metrics_df.to_excel(output_file, index=False, engine='openpyxl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "results_labels_df_total = [results_labels_df_CN_test]\n",
